--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Simon Theuer
 email: smtheuer@gmail.com
 url: https://github.com/SimonT321
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Simon Theuer Portfolio Website"
 keywords: "software, developer, programmer, code, simon, theuer"
 skills: "Programmer"
 meta_author: Theuer Simon
