Added linked in to socials

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ social:
     url: https://twitter.com/Matt_Word
   - title: github
     url: http://github.com/SimonT321
+  - title: linkedin
+    url: www.linkedin.com/in/simon-theuer
+
 
 # Postal address (add as many lines as necessary)
 address:
