Changed linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ social:
   - title: github
     url: http://github.com/SimonT321
   - title: linkedin
-    url: www.linkedin.com/in/simon-theuer
+    url: http://linkedin.com/in/simon-theuer
 
 
 # Postal address (add as many lines as necessary)
