Added spotify to socials

--- a/_config.yml
+++ b/_config.yml
@@ -27,12 +27,14 @@ color:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: https://twitter.com/Matt_Word
   - title: github
     url: http://github.com/SimonT321
   - title: linkedin
     url: http://linkedin.com/in/simon-theuer
+  - title: twitter
+  url: https://twitter.com/Matt_Word
+  - title: spotify
+  url: https://open.spotify.com/user/vriidq98gc0us6c6ntanwxztf?si=1fi4KDh5SqeGm9vnbor-8g&utm_source=copy-link
 
 
 # Postal address (add as many lines as necessary)
